--- a/LetsWrite/templates/home.html
+++ b/LetsWrite/templates/home.html
@@ -17,7 +17,7 @@
             <h1 style="color:white;padding-top:4px; font-family:Great Vibes, cursive;font-size: 25px !important;">OnBoard</h1>
         </div>
         <form class="formstyle">
-            <div id="name" style="margin-bottom: 4px;text-align:: center;width: 100%;justify-content: center;">
+            <div id="name" style="margin-bottom: 4px;text-align: center;width: 100%;justify-content: center;">
                 <label for="username" style="color: white">Enter Name</label>
             </div>
             <!-- <video autoplay playsinline id="video"></video> -->
@@ -74,15 +74,32 @@
             </select>
         </div>
         <div id="root">
-            <div id="container" class="container">
+            <div id="container" class="container" style="border:1px solid black; 
+          height: 300px;width:400px;margin: 20px 21px;
+          background-color:rgb(202,231,246,0.5) ;
+           border-radius: 50px;border:0px;
+           display:none   
+           
+          ">
                 <div id="local" class="participant">
                     <div id="myVideo" style="width: 400px; height:308px; 
                   margin:auto;
                   ">
                         <video autoplay playsinline id="video"></video>
                     </div>
-                    <div id="one" class="label">
+                    <div id="one" class="label" style="margin-left:25%; 
+                  width:200px;
+                  height:30px;
+                  font-size:20px;
+                  background-color: rgb(202,233,246,0.7);
+                  color:white;
+                  
+                  ">
                     </div>
+                </div>
+                <div id="imageDiv">
+                    <!-- <img src="#" id="myImg" style="width: 400px; height: 308px; position: absolute; margin: auto; opacity: 0.5; left: 37%">
+-->
                 </div>
                 <!-- more participants will be added dynamically here -->
             </div>
@@ -127,6 +144,7 @@
 
     }
     </script>
+    
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
