--- a/LetsWrite/static/home.css
+++ b/LetsWrite/static/home.css
@@ -1,3 +1,5 @@
+
+
 .optionCamera {
     width: 170px;
     margin: auto;
@@ -6,14 +8,7 @@
     color: white;
 }
 
-.turnoverbtn {
-    margin-top: 10px;
-    line-height: 2;
-    border-radius: 10px;
-    width: 100px;
-    height: 50px;
-    background-color: rgb(202, 233, 246, 0.9);
-}
+
 
 html,
 body {
@@ -220,7 +215,7 @@ button:hover {
     #turn_over {
         display: none;
         top: 95%;
-        right: 47%;
+        right: 723px;
         position: absolute;
     }
 
@@ -249,7 +244,7 @@ button:hover {
     #turn_over {
         display: none;
         top: 67%;
-        right: 45%;
+        right: 723px;
         position: absolute;
     }
 
