--- a/LetsWrite/templates/home.html
+++ b/LetsWrite/templates/home.html
@@ -2,44 +2,199 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles1.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
+<style>
+    .maindiv{
+        width:440px;border:1px solid black;margin:auto;background-image: url(https://www.desktopbackground.org/download/540x960/2011/07/11/232812_plain-blue-backgrounds-wallpapers-wallpapers-cave_1920x1080_h.jpg); background-size: cover;border-radius: 35px;border:0px;height: 900px;
+    }
+
+    .titlefor{
+        height: 50px;width: 300px;background-color:rgb(202,233,246,0.4); border-radius: 20px;align-items: center;justify-content: center;text-align: center;margin:auto;margin-bottom: 20px;
+    }
+
+    .headingfor{
+        color:white;padding-top:4px; font-family:Great Vibes, cursive;font-size: 25px !important;
+    }
+
+    .formfor{
+        border:1px solid black;display: block;height: auto;width:420px;justify-content: center;text-align: center;border:0px;margin:auto
+    }
+    .namefield{
+        margin-bottom: 4px;text-align: center;width: 100%;justify-content: center;
+    }
+
+    .nameinput{
+        padding-left: 2px; margin:auto;margin-bottom: 10px;width:330px;border-radius: 20px;height: 35px;background-color: rgba(202,233,246,0.7);border: 0px; text-align: center;
+    }
+
+    .inputfield{
+        width:300px !important;border-radius: 20px !important;height: 35px !important;background-color: transparent !important;border: 0px !important; text-align: center !important;
+    }
+    .roomcode{
+        margin-bottom: 4px;text-align: center;width: 100%;justify-content: center;
+    }
+    .iconfor{
+        margin:auto;margin-bottom: 10px;width:330px;border-radius: 20px;height: 35px;background-color: rgba(202,233,246,0.7);border: 0px; text-align: center;
+    }
+    .inputfield2{
+        width:300px !important;border-radius: 20px !important;height: 35px !important;background-color: transparent !important;border: 0px !important; text-align: center !important;
+    }
+    .statusfield{
+        margin-left:auto;margin-right: auto;border: 1px solid black;width:200px;justify-content: center;text-align: center;background-color:rgb(255, 81, 0,0.5) ;border-radius: 30px;border:0px;height: 30px;margin-bottom:15px
+    }
+    .joinfield{
+        width:300px;height:225px; border:1px solid white;margin:auto !important;margin-top:120px !important;justify-content:center !important;text-align:center !important;border-radius:20px !important;margin-bottom:50px;
+    }
+    .asfield{
+        margin:auto;align-items:center;color:white;margin-bottom:35px;margin-top:20px;font-size:25px;line-height: 2;
+    }
+    .btnsharescreen{
+        color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1
+    }
+    .btntogglechat{
+        color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1
+    }
+    .btnleave{
+        color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1;
+    }
+    .cameradiv{
+        text-align:center; margin-top:15px;display: none;justify-content: center;text-align: center;width: 100%; width: 100%;
+    }
+    .containeradd{
+        border:1px solid black; 
+          height: 300px;width:400px;margin: 20px 21px;
+          background-color:rgb(202,231,246,0.5) ;
+           border-radius: 50px;border:0px;
+           display:none   
+           
+         
+    }
+    .vids{
+        width: 400px; height:308px; 
+                  margin:auto;
+    }
+    .rootlabel{
+        margin-left:25%; 
+                  width:200px;
+                  height:30px;
+                  font-size:20px;
+                  background-color: rgb(202,233,246,0.7);
+                  color:white;
+                  
+    }
+    .btngr{
+        display: none;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    margin-top: 46px;
+    }
+    .btnaskdoubt{
+        background-color: rgba(22, 150, 35, 0.5);height: 50px;border-radius:80px ;color:white;margin-top: 20px;line-height:1
+    }
+    .canvasstyle{
+        position: absolute;left: auto; height: 0px
+    }
+    .btncapture{
+        background-color: rgba(235, 13, 13, 0.8);height: 68px;border-radius:114px ;color:white;margin-top: 20px;
+        width: 71px;
+              line-height:1
+    }
+    .btnclearscreen{
+        background-color: rgba(22, 150, 35, 0.5);height: 68px;border-radius:114px ;color:white;margin-top: 20px;
+        width: 71px;
+              line-height:1
+    }
+    .chatstyle{
+        border:1px solid black;height: 500px;width: 300px;border-radius: 40px;border:0px;position: absolute;left: 73%; top: 30%
+    }
+    .chatscrolls{
+        margin-bottom: 0px;margin-left: 0px;height: 400px;width: 300px;border: 1px solid black; background-color: rgb(202, 217, 214);border-radius: 10px;padding: 5px;
+    }
+    .chatin{
+        margin:auto;text-align: center;height: 20px;border:0px
+    }
+    .chatinput{
+        margin-bottom: 10px;width:300px;border-radius: 20px;border:0px ;margin-top:-41px;
+    }
+    .btnallow{
+        background-color: rgba(22, 150, 35, 0.8);height: 50px;border-radius:80px ;color:white;margin-top: 20px;line-height:1
+    }
+    .btnturnover{
+        text-align:center; justify-content: center;width: 100%;display: inline-flex;
+    }
+    .turnoverbtn {
+    margin-top: 10px;
+    line-height: 2;
+    border-radius: 114px;
+    width: 71px;
+    height: 68px;
+    background-color: rgba(245, 121, 6, 0.9) !important;
+    
+}
+    .tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+</style>
 
 <body>
-    <div style="width:440px;border:1px solid black;margin:auto;background-image: url(https://www.desktopbackground.org/download/540x960/2011/07/11/232812_plain-blue-backgrounds-wallpapers-wallpapers-cave_1920x1080_h.jpg); background-size: cover;border-radius: 35px;border:0px;height: 900px;">
+    <div class="maindiv">
         <div style="height: 20px;">
         </div>
-        <div class="head">
-            <h1 style="color:white;padding-top:4px; font-family:Great Vibes, cursive;font-size: 25px !important;">OnBoard</h1>
+        <div class="head titlefor">
+            <h1 class="headingfor">Let's Write</h1>
         </div>
-        <form class="formstyle">
-            <div id="name" style="margin-bottom: 4px;text-align: center;width: 100%;justify-content: center;">
+        <form class="formstyle formfor">
+            <div id="name" class="namefield">
                 <label for="username" style="color: white">Enter Name</label>
             </div>
             <!-- <video autoplay playsinline id="video"></video> -->
-            <div id="name_input">
+            <div id="name_input" class="nameinput">
                 <i class="fas fa-user" style="color: white; font-size: 20px;"></i> 
 
-                <input type="text" autocomplete="off"  style="width:300px;border-radius: 20px;height: 35px;background-color: transparent;border: 0px; text-align: center;" name="username" id="username">
+                <input type="text" autocomplete="off"  class="inputfield" name="username" id="username">
 
 
             </div>
-            <div id="room" style="margin-bottom: 4px;text-align: center;width: 100%;justify-content: center;">
+            <div id="room" class="roomcode">
                 <label for="code" style=" color: white">Enter Room Code</label>
             </div>
-            <div id="room_input">
-                <i class="fas fa-key" name="username" id="code">
+            <div id="room_input" class="iconfor">
+                <i class="fas fa-key" style="color: white; font-size: 20px;"></i> <input type="text" class="inputfield2" name="username" id="code">
             </div>
-            <div>
+            <div class="statusfield">
                 <p id="count" style="padding: 3px;color:white">Disconnected</p>
             </div>
             <div style="margin-bottom: 30px; color:white">
-                <div id="panel" class="join">
-                    <div style="margin:auto;align-items:center;color:white;margin-bottom:35px;margin-top:20px;font-size:25px;line-height: 2;">
+                <!-- <button style="width:100px;height: 30px;color:white;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px" id="join_leave_student">Join as a Student</button>
+              <button style="width:100px;height: 30px;color:white;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px" id="join_leave_mentor">Join as a Mentor</button> -->
+                <div id="panel" class="join joinfield">
+                    <div class="asfield">
                         Join As
                     </div>
                     <div style="display: inline-flex">
@@ -56,16 +211,12 @@
             </span>
             <span>Switch camera</span>
         </button>
-        <div id="somemorebtns" style="display: none;
-    width: 100%;
-    margin: auto;
-    text-align: center;
-    margin-top: 46px;">
-            <button id="share_screen" style="color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1" disabled>Share screen</button>
-            <button id="toggle_chat" style="color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1" disabled>Toggle Chat</button>
-            <a href="/"><button id="Leave_call" style="color:white;width:100px;height: 30px;background-color: rgb(202,233,246,0.4);border-radius: 20px;border:1px;line-height:1;">Leave Call</button></a>
+        <div id="somemorebtns" class="btngr">
+            <button id="share_screen" class="btnsharescreen" disabled>Share screen</button>
+            <button id="toggle_chat" class="btntogglechat" disabled>Toggle Chat</button>
+            <a href="/"><button id="Leave_call" class="btnleave">Leave Call</button></a>
         </div>
-        <div style="text-align:center; margin-top:15px;display: none;justify-content: center;text-align: center;width: 100%; width: 100%" id="cameraop">
+        <div class="cameradiv" id="cameraop">
 
             <select id="video-devices" class="optionCamera">
                 <option value="0">
@@ -74,26 +225,13 @@
             </select>
         </div>
         <div id="root">
-            <div id="container" class="container" style="border:1px solid black; 
-          height: 300px;width:400px;margin: 20px 21px;
-          background-color:rgb(202,231,246,0.5) ;
-           border-radius: 50px;border:0px;
-           display:none   
-           
-          ">
+            <div id="container" class="container containeradd">
                 <div id="local" class="participant">
-                    <div id="myVideo" style="width: 400px; height:308px; 
-                  margin:auto;
+                    <div id="myVideo" class="vids
                   ">
                         <video autoplay playsinline id="video"></video>
                     </div>
-                    <div id="one" class="label" style="margin-left:25%; 
-                  width:200px;
-                  height:30px;
-                  font-size:20px;
-                  background-color: rgb(202,233,246,0.7);
-                  color:white;
-                  
+                    <div id="one" class="label rootlabel
                   ">
                     </div>
                 </div>
@@ -103,28 +241,27 @@
                 </div>
                 <!-- more participants will be added dynamically here -->
             </div>
-            <canvas disabled id="canvas" style="position: absolute;left: auto; height: 0px"></canvas>
+            <canvas disabled id="canvas" class="canvasstyle"></canvas>
             <div id="somebuttons">
-                <button style="background-color: rgba(22, 150, 35, 0.5);height: 50px;border-radius:80px ;color:white;margin-top: 20px;line-height:1" id="Turn">Ask Doubt</button>
-                <button style="background-color: rgba(235, 13, 13, 0.8);height: 50px;border-radius:80px ;color:white;margin-top: 20px;
-              line-height:1" id="capture" disabled onclick="capture1()">Capture</button>
-                <button style="background-color: rgba(22, 150, 35, 0.5);height: 50px;border-radius:80px ;color:white;margin-top: 20px;line-height:1" id="cls">Clear Screen</button>
+                <button class="btnaskdoubt" id="Turn">Ask Doubt</button>
+                <button class="btncapture" id="capture" disabled onclick="capture1()"><i class="fa fa-2x fa-camera"></i></button>
+                <button class="btnclearscreen" id="cls"><i class="fa fa-2x fa-hand-rock"></i></button>
             </div>
-            <div id="chat">
-                <div id="chat-scroll">
+            <div id="chat" class="chatstyle">
+                <div id="chat-scroll" class="chatscrolls">
                     <div id="chat-content">
                         <!-- chat content will be added dynamically here -->
                     </div>
                 </div>
-                <div style="margin:auto;text-align: center;height: 20px;border:0px">
-                    <input id="chat-input" placeholder="Type Your Query" style="margin-bottom: 10px;width:300px;border-radius: 20px;border:0px margin-top:-41px" type="text">
+                <div class="chatin">
+                    <input id="chat-input" placeholder="Type Your Query" class="chatinput" type="text">
                 </div>
                 <div>
-                    <button id="Allow" class="allowbtn" style="background-color: rgba(22, 150, 35, 0.8);height: 50px;border-radius:80px ;color:white;margin-top: 20px;line-height:1">Allow</button>
+                    <button id="Allow" class="allowbtn btnallow">Allow</button>
                 </div>
             </div>
-            <div style="text-align:center; justify-content: center;width: 100%;display: inline-flex;">
-                <button id="turn_over" class="turnoverbtn">Turn Over</button>
+            <div class="btnturnover">
+                <button id="turn_over" class="turnoverbtn"><i class="fa fa-2x fa-dot-circle" style="color:white"></i></button>
             </div>
         </div>
     </div>
@@ -144,7 +281,72 @@
 
     }
     </script>
-    
+    <script>
+    (function() {
+        if (
+            !"mediaDevices" in navigator ||
+            !"getUserMedia" in navigator.mediaDevices
+        ) {
+            alert("Camera API is not available in your browser");
+            return;
+        }
+
+        // get page elements
+        const video = document.querySelector("#video");
+
+        // video constraints
+        const constraints = {
+            video: {
+                width: {
+                    min: 1280,
+                    ideal: 1920,
+                    max: 2560,
+                },
+                height: {
+                    min: 720,
+                    ideal: 1080,
+                    max: 1440,
+                },
+            },
+        };
+
+        // use front face camera
+        let useFrontCamera = true;
+
+        // current video stream
+        let videoStream;
+
+        // handle events
+        // play
+        btnChangeCamera.addEventListener("click", function() {
+            useFrontCamera = !useFrontCamera;
+
+            initializeCamera();
+        });
+
+        // stop video stream
+        function stopVideoStream() {
+            if (videoStream) {
+                videoStream.getTracks().forEach((track) => {
+                    track.stop();
+                });
+            }
+        }
+
+        // initialize
+        async function initializeCamera() {
+            stopVideoStream();
+            constraints.video.facingMode = useFrontCamera ? "user" : "environment";
+
+            try {
+                videoStream = await navigator.mediaDevices.getUserMedia(constraints);
+                video.srcObject = videoStream;
+            } catch (err) {}
+        }
+
+        initializeCamera();
+    })();
+    </script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
